# vector-based_terrain_modelling

./: LICENSE  README.md  index.html
edition/: .gitignore  CMakeLists.txt  README.md
edition/Include/: GaussianTerrainRaytracingWidget.h  Kernels.h  MayaSimpleRendererColors.h  graph.h  qte.h  uic_main.h  utils.h
edition/Include/Kernels/: DetailsKernel.h  FactoryKernel.h  GaussianKernel.h  Kernel.h
edition/Include/Tools/: Tool.h  ToolBrush.h  ToolCurve.h  ToolEdit.h  ToolGraph.h
edition/Include/libs/: analyticfield.h  gpu-shader.h  gputerrainsimu.h  mathematics.h  maya.h  mayashader.h  realtime.h
edition/Shaders/: gaussians_acceleration_grid.glsl  gaussians_holes_detection.glsl  gaussians_rasterizer.glsl  primitives_rasterizer.glsl
edition/Source/: GaussianTerrainRaytracingWidget.cpp  Kernels.cpp  MayaSimpleRendererColors.cpp  graph.cpp  main.cpp  moc_GaussianTerrainRaytracingWidget.cpp  qte-main-window.cpp  utils.cpp
edition/Source/Kernels/: DetailsKernel.cpp  GaussianKernel.cpp  Kernel.cpp
edition/Source/Tools/: ToolBrush.cpp  ToolCurve.cpp  ToolEdit.cpp  ToolGraph.cpp
edition/Source/libs/: array.cpp  box.cpp  chart.cpp  circle2.cpp  cone.cpp  convex2.cpp  cpu.cpp  cuboctahedron.cpp  cuboid.cpp  curvecubic.cpp  curvequadric2.cpp  curvequadric2set.cpp  curvesetcubic.cpp  curvesetcubic2.cpp  curvesetquadric.cpp  dodecahedron.cpp  draw.cpp  ellipse2.cpp  evector.cpp  evectorfloat.cpp  gpu-shader.cpp  gpuanalysis.cpp  gputerrainsimu_test.cpp  heightfield-carve.cpp  heightfield.cpp  hexagon2.cpp  ia.cpp  lines2.cpp  mathematics.cpp  matrix.cpp  maya-cameraset.cpp  maya-glwidget.cpp  maya-instancevbo.cpp  maya-instancevboall.cpp  maya-instancevboset.cpp  maya-material.cpp  maya-renderer.cpp  maya-widget-initialize.cpp  mesh-widget.cpp  noise.cpp  (+27 more)
edition/UI/: main.ui
edition/data/: N27E086_0000_0001.npy  N27E086_0000_0002.npy  N27E086_0002_0000_12kprimitives.npy  alps.npy  mountain_6kgaussians.npy  moutain_1300gaussians.npy
edition/data/brushes/templates/: 001.csv  002.csv  003.csv  004.csv  005.csv  Isl01.csv  Isl02.csv  Isl03.csv  Isl04.csv  Isl05.csv  castle.csv  idaho.csv  moutain.csv  moutain_1.csv  scaling.csv
edition/shaders/libs/: boundingBox.glsl  heightfield_raytrace.glsl  mesh.glsl  point.glsl  sphereTracing.glsl
edition/src/: GaussianTerrainRaytracingWidget.cpp  Kernels.cpp  MayaSimpleRendererColors.cpp  VectorTerrainRaytracingWidget.cpp  graph.cpp  main.cpp  moc_qte.cpp  qte-main-window.cpp  utils.cpp
edition/src/Kernels/: DetailsKernel.cpp  GaussianKernel.cpp  Kernel.cpp
edition/src/Tools/: ToolBrush.cpp  ToolEdit.cpp  ToolGraph.cpp
edition/src/libs/: analyticfield.cpp  analyticpalette.cpp  analyticscalarfield.cpp  array2.cpp  axis.cpp  box2.cpp  camera.cpp  capsule.cpp  circle.cpp  color-hsl.cpp  color.cpp  cubic.cpp  curvecubic2.cpp  curvequadric.cpp  cylinder.cpp  disc2.cpp  disctiles.cpp  evector2.cpp  frame.cpp  frame2.cpp  framescaled.cpp  gpuanalysis.cpp  gpuheightfield.cpp  gputerrainsimu.cpp  gputerrainsimu_test.cpp  hashtable.cpp  heightfield-access.cpp  heightfield-flow.cpp  heightfield-mesh.cpp  heightfieldshader.cpp  hemisphere.cpp  histogram.cpp  icosahedron.cpp  icosidodecahedron.cpp  integerfield2.cpp  line2.cpp  linear.cpp  matrix2.cpp  matrix4.cpp  maya-geometry.cpp  (+41 more)
optimisation/: .gitignore  README.md  config.py  gaussian_model.py  inference.py  inference_step_by_step.py  launch_all_files_in_folder.py  losses.py  metrics.py  optimise.py  optimise_all_files_in_folder.py  optimise_utils.py  rasterizer.py  requirements.txt  utils.py
optimisation/configs/: default.yml
optimisation/gsplat/: __init__.py  rendering.py
optimisation/gsplat/cuda/: _wrapper.py
optimisation/gsplat/cuda/csrc/: bindings.h  ext.cpp  rasterization.cu
